updated testing cnn1

--- a/Testing Files/Testing_CNN1.ipynb
+++ b/Testing Files/Testing_CNN1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "jb_Sgluvq7ou"
       },
@@ -21,7 +21,8 @@
         "from torch.optim import Adam\n",
         "from torch.autograd import Variable\n",
         "import pathlib\n",
-        "from torchvision import models"
+        "from torchvision import models\n",
+        "from sklearn.metrics import precision_score, f1_score"
       ]
     },
     {
@@ -32,14 +33,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Se5Jb1Udq7ov",
-        "outputId": "c502784d-5d25-44ff-b7e7-21222b404d8d"
+        "outputId": "b8585512-f0e5-4d0c-b249-11bcfa01a8b9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "cpu\n"
+            "cuda\n"
           ]
         }
       ],
@@ -50,13 +51,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "L073MaJjrMSI",
-        "outputId": "a03010b3-9d23-452b-869b-92e1469405e5"
+        "outputId": "a93a6d1b-feeb-4c5a-e613-241339737f1f"
       },
       "outputs": [
         {
@@ -90,68 +91,29 @@
       "metadata": {
         "id": "hUo9xwvOSyTm"
       },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "test_path = '/content/drive/MyDrive/Colab Notebooks/DL Submission/test'\n",
+        "test_loader = DataLoader(torchvision.datasets.ImageFolder(\n",
+        "                          test_path,\n",
+        "                          transform=transformer),\n",
+        "                          batch_size = 128,\n",
+        "                          shuffle=False)"
+      ],
+      "metadata": {
+        "id": "zpBkU2zwHrA0"
+      },
       "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "execution_count": 6,
-      "metadata": {
-        "id": "YRH5m_joq7oy"
-      },
-      "outputs": [],
-      "source": [
-        "#DataLoader\n",
-        "\n",
-        "batchSize=128\n",
-        "train_path = '/content/drive/MyDrive/Colab Notebooks/chest_xray/train'\n",
-        "train_loader = DataLoader(torchvision.datasets.ImageFolder(\n",
-        "                          train_path,\n",
-        "                          transform=transformer),\n",
-        "                          batch_size = batchSize,\n",
-        "                          shuffle=True)\n",
-        "val_path = '/content/drive/MyDrive/Colab Notebooks/chest_xray/val'\n",
-        "val_loader = DataLoader(torchvision.datasets.ImageFolder(\n",
-        "                          val_path,\n",
-        "                          transform=transformer),\n",
-        "                          batch_size = batchSize)\n",
-        "\n",
-        "test_path = '/content/drive/MyDrive/Colab Notebooks/chest_xray/test'\n",
-        "test_loader = DataLoader(torchvision.datasets.ImageFolder(\n",
-        "                          test_path,\n",
-        "                          transform=transformer),\n",
-        "                          batch_size = batchSize,\n",
-        "                          shuffle=False)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XlAxtvnZq7oz",
-        "outputId": "48a19544-0255-45e5-a460-c9e507221e0c"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['NORMAL', 'PNEUMONIA']\n"
-          ]
-        }
-      ],
-      "source": [
-        "root=pathlib.Path(train_path)\n",
-        "classes = sorted([j.name.split('/')[-1]for j in root.iterdir()])\n",
-        "print(classes)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
       "metadata": {
         "id": "hK0WKVVYq7o0"
       },
@@ -196,14 +158,12 @@
         "\n",
         "    output = output.view(-1,64*80*80)\n",
         "    output = self.fc(output)\n",
-        "    return output\n",
-        "\n",
-        "\n"
+        "    return output\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "id": "5fkMXSFdq7o1"
       },
@@ -223,33 +183,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 10,
       "metadata": {
         "id": "SwZG_617q7o1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1d05bb20-e833-4a6e-b012-88aef10c12c6"
+        "outputId": "5da9f4b3-72c1-40fa-aaf6-7a856a3c26db"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test Accuracy: 85.26%\n"
+            "Test Accuracy: 85.42%\n",
+            "Precision: 86.22%\n",
+            "F1 Score: 83.69%\n"
           ]
         }
       ],
       "source": [
-        "#loading saved model\n",
-        "\n",
-        "model_path = '/content/drive/MyDrive/Colab Notebooks/Best_model_CNN1_Sig_adagrad_128_0.001.pt'\n",
+        "model_path = '/content/drive/MyDrive/Colab Notebooks/DL Submission/Best_model_CNN1_Sig_adagrad_128_0.001.pt'\n",
         "state_dict = torch.load(model_path,map_location=device)\n",
-        "# Load the state dictionary into the model\n",
+        "\n",
         "model.load_state_dict(state_dict)\n",
         "model.to(device)\n",
         "\n",
-        "# Set the model to evaluation mode\n",
+        "#to calulate eval later\n",
+        "predicted_list = []\n",
+        "target_list =[]\n",
+        "#set to evaluation mode\n",
         "model.eval()\n",
         "\n",
         "total_correct = 0\n",
@@ -261,9 +224,17 @@
         "        outputs = model(inputs)\n",
         "        _, predicted = torch.max(outputs, 1)\n",
         "        total_correct += (predicted == targets).sum().item()\n",
+        "        predicted_list.extend(predicted.cpu().numpy())\n",
+        "        target_list.extend(targets.cpu().numpy())\n",
         "\n",
         "accuracy = total_correct / total_images_test\n",
-        "print(f'Test Accuracy: {accuracy * 100:.2f}%')\n"
+        "print(f'Test Accuracy: {accuracy * 100:.2f}%')\n",
+        "\n",
+        "precision = precision_score(target_list, predicted_list, average='macro')\n",
+        "print(f'Precision: {precision * 100:.2f}%')\n",
+        "\n",
+        "f1 = f1_score(target_list, predicted_list, average='macro')\n",
+        "print(f'F1 Score: {f1 * 100:.2f}%')\n"
       ]
     },
     {
@@ -291,7 +262,7 @@
         "\n",
         "# Load the model\n",
         "model = ConvNet(num_classes=2)\n",
-        "model_path = '/content/drive/MyDrive/Colab Notebooks/Best_model_CNN1_Sig_adagrad_128_0.001.pt'\n",
+        "model_path = '/content/drive/MyDrive/Colab Notebooks/DL Submission/Best_model_CNN1_Sig_adagrad_128_0.001.pt'\n",
         "state_dict = torch.load(model_path,map_location=device)\n",
         "model.load_state_dict(state_dict)\n",
         "model.eval()\n",
@@ -312,9 +283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RgPOM4l-pakL",
-        "outputId": "988213b7-4bb4-4a8b-8858-d68fd463a7dc"
+        "outputId": "aff056a3-fc38-49d3-87b8-9a031624d8bd"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
