--- a/Testing Files/Testing_ResNet.ipynb
+++ b/Testing Files/Testing_ResNet.ipynb
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "model_path = 'paths/resnet_model.pth'\n",
+    "model_path = '/content/drive/MyDrive/Colab Notebooks/DL Submission/ResNet Trained Models/restnet_model.pth'\n",
     "state_dict = torch.load(model_path,map_location=device)\n",
     "\n",
     "model_ft.load_state_dict(state_dict)\n",
